--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 /vendor/
 /owa-data/
-owa-config.php
 node_modules/
 modules/base/dist/
 modules/base/js/owa.tracker-combined-min.js
+package-lock.json
+composer.lock
+.azure/config
